--- a/popup/popup.html
+++ b/popup/popup.html
@@ -14,5 +14,7 @@
       <input type="text" id="username" placeholder="eg: noirple" />
       <button id="submit-btn">Let's pick</button>
     </div>
+
+    <footer>Une production de Noirple</footer>
   </body>
 </html>
