Movie picking logic is implemented

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -18,9 +18,10 @@
     <!-- State 2: User IS on watchlist page -->
     <div id="on-watchlist" class="hidden">
       <button id="pick-btn">Pick a film</button>
+      <p id="result"></p>
     </div>
 
-    <footer>Une production de Noirple</footer>
+    <footer>Une production de noirple</footer>
     <script src="popup.js"></script>
   </body>
 </html>
