--- a/popup/popup.html
+++ b/popup/popup.html
@@ -18,6 +18,10 @@
     <!-- State 2: User IS on watchlist page -->
     <div id="on-watchlist" class="hidden">
       <button id="pick-btn">Pick a film</button>
+    </div>
+
+    <!-- State 3: Film has been picked -->
+    <div id="film-result" class="hidden">
       <p id="result"></p>
     </div>
 
