--- a/popup/popup.html
+++ b/popup/popup.html
@@ -21,8 +21,13 @@
     </div>
 
     <!-- State 3: Film has been picked -->
-    <div id="film-result" class="hidden">
-      <p id="result"></p>
+    <div id="result" class="hidden">
+      <img id="result-poster" src="" alt="" />
+      <div class="result-info">
+        <p id="result-name"></p>
+        <a id="result-link" href="#" target="_blank">View on Letterboxd<span class="material-icons">open_in_new</span></a>
+        <button id="pick-again-btn">Pick again</button>
+      </div>
     </div>
 
     <footer>Une production de noirple</footer>
