MVP is ready to publish

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -30,7 +30,7 @@
       </div>
     </div>
 
-    <footer>Une production de noirple</footer>
+    <footer>Une production de Noirple</footer>
     <script src="popup.js"></script>
   </body>
 </html>
