Local storage and State 0 UI implemented

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -8,6 +8,13 @@
       <h1>Pickd</h1>
     </div>
 
+    <!-- State 0: Returning user with stored username -->
+    <div id="welcome-back" class="hidden">
+      <p>Welcome back, <span id="welcome-username"></span></p>
+      <button id="welcome-go-btn">Go to your watchlist</button>
+      <button id="change-user-btn">Change user</button>
+    </div>
+
     <!-- State 1: User is NOT on watchlist page -->
     <div id="not-on-watchlist">
       <p>You should be on your watchlist!</p>
