GitHub icon added for repo access

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -4,8 +4,9 @@
   </head>
   <body>
     <div class="header">
-      <img src="../Pickd.svg" alt="Pickd icon">
+      <img src="../icons/Pickd.svg" alt="Pickd icon">
       <h1>Pickd</h1>
+      <a href="https://github.com/ahmetnusretavci/Pickd" target="_blank" class="github-link"><img src="../icons/GitHub.svg" alt="GitHub" class="github-icon"></a>
     </div>
 
     <!-- State 0: Returning user with stored username -->
