Quote added to State 2

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -25,6 +25,7 @@
 
     <!-- State 2: User IS on watchlist page -->
     <div id="on-watchlist" class="hidden">
+      <p class="quote">Life is a sum of all your choices<br><span class="quote-source">&#8212; Albert Camus</span></p>
       <button id="pick-btn">Pick a film</button>
     </div>
 
